style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');

* {
    margin: 0;
    padding: 0;
}

.container {
    width: 100%;
    margin: 0 auto;
}

header {
    background-image: url(/images/bg-hero-desktop.svg);
    background-color: hsl(193, 100%, 96%);
}

nav{
    display: flex;
    justify-content: space-between;
}

.logo {
    margin: 50px 80px;
}

.logo img {
    width: 200px ;
}

.try {
    margin: 60px 80px;
}

.try a {
    background-color: #fff;
    padding: 15px 65px;
    font-family: 'Open sans', sans-serif;
    font-weight: 700;
    font-size: 18px;
    border-radius: 30px;
    color: hsl(192, 100%, 9%);
    text-decoration: none;
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.52);
}

.try a:active {
    opacity: .6;
}

.info {
    margin: 0px 30px;
    padding: 50px;
    display: flex;
    justify-content: space-between;
}

.box {
    width: 600px;
    margin-top: 100px;
}

.box h1 {
    color: hsl(192, 100%, 9%);
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    line-height: 1.6;
    font-size: 40px;
    margin-bottom: 20px;
}

.box p {
    font-family: 'Open Sans', sans-serif;
    color: hsl(192, 100%, 9%);
    font-weight: 400;
    line-height: 1.3;
    margin-bottom: 40px;
}

.box a {
    background: hsl(322, 100%, 66%);
    padding: 20px 65px;
    border-radius: 25px;
    font-family: 'Open sans', sans-serif;
    font-weight: 700;
    color: #fff;
    text-decoration: none;
    box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.52);
}

.box a:active {
    opacity: .6;
}

.image img {
    width: 85%;
    position: relative;
    left: 150px;
}

.section {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
}

.card {
    display: flex;
    justify-content: space-between;
    width: 50%;
    margin: 30px auto;
    border-radius: 10px;
    padding: 50px 50px 50px 100px;
    box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.52);
}

.secondCard {
    flex-direction: row-reverse;
    justify-content: space-between;
}

.txt {
    width: 40%;
    align-self: center;
    line-height: 1.6;
}


.txt h1 {
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    margin-bottom: 20px;
}

.txt p {
    font-family: 'Open sans', sans-serif;
    font-weight: 400;
    color: hsl(192, 100%, 9%);
}

.ilustration {
    width: 500px;
}

.ilustration img {
    width: 70%;

}

.ilustration .img {
    position: relative;
    left: 150px;
}


.getStarted {
    display: flex;
    flex-direction: column;
    align-items: center;
    background: #fff;
    width: 30%;
    border-radius: 10px;
    margin: 30px auto;
    padding: 50px;
    box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.52);
    position: relative;
    top: 130px;

}

.getStarted h1 {
    color: hsl(192, 100%, 9%);
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    line-height: 1.6;
    font-size: 30px;
    margin-bottom: 50px;
}

.getStarted a {
    background: hsl(322, 100%, 66%);
    padding: 20px 65px;
    border-radius: 25px;
    font-family: 'Open sans', sans-serif;
    font-weight: 700;
    color: #fff;
    text-decoration: none;
    box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.52);
}

.getStarted a:active {
    opacity: .6;
}

.footer {
    display: flex;
    justify-content: space-around;
    padding: 40px;
    padding-top: 100px;
    background-color: hsl(192, 100%, 9%);
    color: #fff;
}

.f1 {
    width: 300px;
    margin: 30px;
    margin-right: 0px;
    display: flex;
    flex-direction: column;
}
.footerLogo {
    margin-bottom: 30px;

}

.direction,
.number,
.email {
    display: flex;
    flex-direction: row;
    margin-bottom: 30px;
    font-family:'Open sans', sans-serif;
    font-weight: 400;
}

.icon {
    margin-right:20px;
    margin-top: 2px;
}

.f2 {
    display: flex;
    margin-top: 50px;
}

.f2 .row {
    margin-top: 30px;
    margin-right: 70px;
}

.f2 a {
    color: #fff;
    text-decoration: none;
}

.f2 a:active{
    text-decoration: underline;
}

.f2 p {
    margin-bottom: 20px;
    font-family: 'Open sans', sans-serif;
    font-weight: 400;
}

.social {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 70px;
    width: 400px;
    height: auto;
}

.social a {
    text-decoration: none;
}

.social i {
    color: #fff;
    font-size: 25px;
    background: hsl(192, 100%, 9%);
    margin: 15px;
}

.social i:active {
    color: hsl(322, 100%, 66%);
}

.social p {
    font-family: 'Open sans',sans-serif;
}

@media only screen and (max-width: 1000px) {

    header {
        background: url(/images/bg-hero-mobile.svg);
    }

    .logo {
        margin: 20px 20px;
    }
    
    .logo img {
        width: 150px;
    }

    .try {
        padding: 10px;
    }

    .try a {
        padding: 10px 20px;
    }

    .info {
        display: flex;
        flex-direction: column;
        align-items: center;
        text-align: center;
    }
    
    .box {
        width: 300px;
        margin-bottom:40px;
    }

    .image img {
        width: 80%;
        position: static;
    }
    
    .section {
        margin-top: 0px;
    }
    
    .card {
        flex-direction: column-reverse;
        justify-content: center;
        text-align: center;
        padding: 30px;
        width: 40%;
    }

    .txt {
        width: 100%;
    }

    .ilustration {
        width: 100%;
    }

    .ilustration img {
        position: static;
        width: 100%;
    }

    .ilustration .img {
        position: static;
        width: 100%;
    }

    .getStarted {
        width: 70%;
    }
    
    .getStarted h1 {
        font-size: 12px;
    }

    .footer {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        padding: 20px;
        padding-top: 100px;
    }

    .footerLogo {
        margin-bottom: 20px;
    }

    .f2 {
        flex-direction: column;
        margin-left: 30px;
    }
    
    .f2 .row {
        margin-top: 0px;
    }

    .social {
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 20px auto;
        font-size: 12px;
    }

    .social .copy {
        text-align: center;
        margin-bottom: 40px;
    }
}

@media only screen and (max-width: 450px) {

    .try {

        margin: 10px 10px;
    }

    .try a {
        width: 100px;
        
        font-weight: 700;
        font-size: 12px;
    }

    .f1 {
        width: 80%;
    }

    .getStarted a {
        padding: 20px 30px;
    }

    .social {
        width: 300px;
        margin: 20px auto;
    }
}

